# adcdc

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  setup.cfg
.devcontainer/: Dockerfile  docker-compose.yaml
adcdc/: cli.py  convert_docker_compose.py
adcdc/commands/: __init__.py  build.py  create.py  run.py
docs/commands/: create.md
examples/lunarvim/: Dockerfile  config.lua  config.yaml  userconfig.lua
examples/nvim/: adcdc-config.yaml  adcdc-docker-template
examples/pycharm/: Dockerfile  adcdc-config.yaml  adcdc-docker-template  config.yaml
