[metadata]
name = adcdc
version = 0.1.0
description = A CLI tool to easily create a devcontainer for any project that uses docker-compose
long_description = file: README.md
keywords = devcontainer
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = adcdc
install_requires =
    click

[options.entry_points]
console_scripts =
    adcdc = adcdc:adcdc_cli

